Fix jumbotron overflow on narrow screens

--- a/resources/styles/style-desktop.css
+++ b/resources/styles/style-desktop.css
@@ -157,6 +157,12 @@ h3 {
   margin: 0 2rem;
 }
 
+@media only screen and (max-width: 870px) and (min-width: 761px) {
+  .jumbo-content {
+    padding-right: 0;
+  }
+}
+
 /* ========== Main section - information ========== */
 #information {
   display: flex;
